* use register alignment for key comparison
* optimize libesedb_checksum_calculate_little_endian_ecc32

Test suite:
* windows search: work on index-based compression
  - create test program to validate output

Notes
* create a root page table instead?
  - no
* read catalog data type defintions and convert them into column definitions?
  - no

20141003
* removed README.macosx
* changes for project site move

20140915
* worked on libfdata btree refactot

20140803
* bug fix in Python-bindings

20140726
* updated dependencies

20130406
* worked on Python-bindings
* updated msvscpp files

20130317
* worked on setup.py

20130305
* worked on Python-bindings
* worked on multi value

20130304
* worked on Python-bindings

20130302
* worked on Python-bindings

20130301
* fix in dpkg files
* worked on Python-bindings

20130217
* worked on Python-bindings

20130216
* 2014 update
* updated dependencies
* worked on Python-bindings
* worked on libfdata update
* worked on libfvalue update

20130421
* worked on libfvalue update

20130420
* worked on libfvalue update

20130415
* worked on libfvalue update

20130414
* updated dependencies
* updated macosx files
* textual changes
* changes for libfdata update
* worked on libfvalue update

20130303
* updated dependencies
* 2013 update
* changes for libfdata update

20120826
* updated dependencies
* project move

20120517
* updated dependencies

20120423
* fixes for deployment

20120414
* updated dependencies
* code clean up

20120411
* code clean up

20120102
* 2012 update

20111210
* updated libcstring, libsystem
* esedbexport:
  - added table index nr to filename for duplicate table names
  - added microseconds to filetimes

20111127
* updated libfdata
* added libfcache

20111120
* code clean up
* updated array type, list type
* updated libcstring, libsystem, libfdata, libfdatetime, libfguid, libfvalue,
  libfmapi, libfwnt
* removed restriction that page tree header should consists of 0-byte values

20111031
* updated README.macosx